public/style/style.css
/* ... */
#chamber .profileIcon  {
    margin-right: 15px;
    min-width: 35px;
}
#chamber .profileIcon a {
    display: inline-block;
    height: 0px;
}
#chamber .profileIcon img {
    border-radius: 20px;
    max-height: 35px;
}
#chamber .controls.left {
    position: absolute;
    bottom: 10px;
    left: 10px;
}
#chamber .controls.topright {
    position: absolute;
    top: 9px;
    right: 10px;
}
#chamber .controls.topleft {
    position: absolute;
    top: 9px;
    left: 10px;
}
#chamber .chamberControls {
    position: absolute;
    bottom: 10px;
    right: 10px;
}
#aggregated {
    margin: auto;
}
#aggregated .chamberchambername {
    cursor: default;
}
#aggregated .pointsControls {
    position: absolute;
    bottom: 10px;
    left: 10px;
}
#aggregated .timeControls {
    position: absolute;
    bottom: 10px;
    right: 10px;
}
#aggregated #chamber {
    width: 960px;
}
#aggregated #chamber .entry .boardname {
    width: 250px;
}
#aggregated #points, #aggregated #time {
    width: 49.5%;
    margin-left: 0%;
    margin-right: 0%;
}
#changelog .controls {
    margin: 0 0 8px 20px;
}
.controls {
    color: #888888;
    opacity: 1;
}
.controls .button, .controls span.currentPageLabel {
    border-radius: 5px;
    background: #ededed;
    display: inline-block;
    border: 2px solid #aaa;
    box-sizing: content-box;
}
.controls .button {
    cursor: pointer;
    user-select: none;
    -moz-user-select: -moz-none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    vertical-align: middle;
    font-size: 13px;
    font-family: Segoe UI;
    text-transform: none;
    height: 24px;
    line-height: 24px;
}
.controls .linkButton a {
    display: inline-block;
    padding-left: 10px;
    padding-right: 10px;
    text-decoration: none;
    color: inherit;
}
.controls span.currentPageLabel {
    font-size: 15px;
    line-height: 24px;
    height: 24px;
    /*width: 60px;*/
}
#changelog .controls span.currentPageLabel {
    font-size: 13px;
    line-height: 22px;
    height: 24px;
    /*width: 90px;*/
}
#chamber .button.standardButton {
    padding-left: 10px;
    padding-right: 10px;
    line-height: 24px;
}
.controls span.currentPageLabel {
    vertical-align: middle;
    text-align: center;
}
.controls .pageInput {
    width: 32px;
    border: none;
    background: transparent;
    font-family: inherit;
    font-size: inherit;
    color: inherit;
    text-align: right;
    padding: 0;
    -moz-appearance: textfield;
}
.controls .pageInput::-webkit-outer-spin-button,
.controls .pageInput::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
.controls .pageInput:focus {
    outline: none;
    text-decoration: underline;
}
.controls .button.previous span.name,.controls span.currentPageLabel {
    padding-left: 8px;
}
.controls .button.next span.name, .controls span.currentPageLabel {
    padding-right: 8px;
}
.controls .button.previous span.icon {
    padding-right: 3px;
}
.controls .button.next span.icon {
    padding-left: 3px;
}
.controls span.icon {
    font-size: 8px;
    display: inline-block;
    width: 20px;
    text-align: center;
    vertical-align: middle;
}
#aggregated #chamber .controls .button span.icon i {
    /*line-height: 23px;*/
}
#chamber .controls .button span.icon i {
    /*line-height: 23px;*/
}
#changelog .controls .button span.icon i {
    /*line-height: 23px;*/
}
.seperate {
    display: inline-block;
    opacity: 0;
}
#chamber .not-public-chambers a, #chamber .chamber-full-explanation a, #profile .uploadInfo a, #announcement a {
    color: #FFF;
}
#profile .uploadInfo, #chamber .not-public-chambers, #announcement {
    background: #3096d1;
    /*width: calc(100% - 10px);*/
    width: 100%;
    line-height: 35px;
    color: #FFF;
    display: none;
    font-size: 11px;
    line-height: 21px;

    padding: 5px;
}
#chamber .not-public-chambers .close-btn, #profile .uploadInfo .close-btn, #announcement .close-btn {
    cursor: pointer;
    background: url("/images/cross.png");
    width: 16px;
    height: 16px;
    margin-right: 2px;
    float: right;
    margin-top: 2px;
}
#chamber .not-public-chambers .notification, #profile .uploadInfo .notification, #announcement .notification {
    width: calc(100% - 42px);
    display: inline-block;
    margin-right: 7px;
    margin-left: 10px;
    font-size: 1.3rem;
}
#chamber .not-public-chambers .close-btn {
    margin-top: 4px;
}
#chamber .not-public-chambers  {
    margin-top: -3px;
    background: #3096d1;
}
.popover-content {
    word-wrap: break-word;
}
html[class="dark"] .popover {
    background-color: inherit;
}
html[class="dark"] .popover-content {
    background-color: #2a2c31;
    color: #f6f6f7;
}
html[class="dark"] .popover.top > .arrow:after {
    border-top-color: #2a2c31;
}
@-moz-document domain(p2sr.laveryjonez.uk) {
    #changelog .datetime{
        width: auto !important;
    }
    #profile .global-stats .block .number {
        font-size: 20px !important;
    }
    #profile .global-stats .block .title{
        font-size: 12px !important;
    }
}

.changelog-filter-options-wrapper{
    display: flex;
    align-content: center;
    justify-content: space-around;
    align-items: center;
}

.changelog-filter-options-group{
    display: flex;
    flex-direction: column;
    gap: 0.3rem;
}

/* DARK MODE */

html[class="dark"] {
    background-color: #0002;
    color: #ffffff;
    color-scheme: dark;
}

html[class="dark"] select>option {
    background: #3e4146;
    color: #ffffff;
}

html[class="dark"] .checkbox,html[class="dark"] input[type="submit"] {
    filter: invert(85%);
}

html[class="dark"] .fa.fa-download,
html[class="dark"] .fa.fa-gamepad,
html[class="dark"] .fa.fa-ban,
html[class="dark"] .fa.fa-comment,
html[class="dark"] .fa.fa-times {
    color: #aaa !important;
}

html[class="dark"] .fa.fa-download:hover,
html[class="dark"] .fa.fa-comment:hover,
html[class="dark"] .fa.fa-times:hover,
html[class="dark"] .fa.fa-play:hover {
    color: #4ba6db !important;
}
/* ... */

